--- a/EDGELEDGER_WEBSITE/css/style.css
+++ b/EDGELEDGER_WEBSITE/css/style.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  line-height: 1.4;
 }
 
 a {
@@ -16,11 +17,42 @@ a {
 
 p {
   margin: 0.75rem 0;
+  /* margin: 1rem 0; */
 }
 
 /* Utility Classes */
 .text-primary {
   color: #93cb52;
+}
+
+.l-heading {
+  font-size: 3rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.lead {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.btn {
+  display: inline-block;
+  color: #fff;
+  background: #93cb52;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 4px;
+  margin-top: 4px;
+}
+
+.btn:hover {
+  background: #7ab436;
+}
+
+.btn-dark {
+  background: #333;
+  color: #fff;
 }
 
 /* Navbar */
@@ -71,5 +103,6 @@ p {
   position: absolute;
   top: 60px;
   left: 0;
+  /* right: 0; */
   background-color: rgba(0,0,0, 0.4);
 }
