--- a/EDGELEDGER_WEBSITE/css/style.css
+++ b/EDGELEDGER_WEBSITE/css/style.css
@@ -21,12 +21,44 @@ p {
 }
 
 /* Utility Classes */
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 0.3rem 2rem;
+  overflow: hidden;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-primary {
   color: #93cb52;
 }
 
-.l-heading {
-  font-size: 3rem;
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #f4f4f4;
+}
+
+.bg-primary {
+  background: #93cb52;
+  color: #fff;
+}
+
+.l-heading {  /* for every big heading */
+  font-size: 4rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.m-heading { /* for every medium heading */
+  font-size: 2rem;
   margin-bottom: 0.75rem;
   line-height: 1.1;
 }
@@ -36,6 +68,14 @@ p {
   margin-bottom: 2rem;
 }
 
+.py-1 { padding: 1.5rem 0; }
+.py-2 { padding: 2rem 0; }
+.py-3 { padding: 3rem 0; }
+
+.p-1 { padding: 1.5rem; } /* one value is for all side */
+.p-2 { padding: 2rem; }
+.p-3 { padding: 3rem; }
+
 .btn {
   display: inline-block;
   color: #fff;
@@ -43,7 +83,7 @@ p {
   padding: 0.5rem 2rem;
   border: none;
   border-radius: 4px;
-  margin-top: 4px;
+  /* margin-top: 4px; */
 }
 
 .btn:hover {
@@ -53,6 +93,16 @@ p {
 .btn-dark {
   background: #333;
   color: #fff;
+}
+
+.list {
+  margin: 0.5rem 0;
+  list-style: none;
+}
+
+.list li {
+  padding: 0.5rem 0;
+  border-bottom: #444 dotted 1px;
 }
 
 /* Navbar */
@@ -93,16 +143,90 @@ p {
 
 #showcase .showcase-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* make the text stacked */
   text-align: center;
   justify-content: center;
   align-items: center;
   height: 100%;
   padding: 0 2rem;
   /* Overlay */
-  position: absolute;
-  top: 60px;
+  position: absolute; /* cover entire showcase content */
+  top: 65px;
   left: 0;
-  /* right: 0; */
+  right: 0;
+  bottom: 0;
   background-color: rgba(0,0,0, 0.4);
+}
+
+/* Section: What We Do */
+#what .items {
+  display: flex;
+  padding: 1rem;
+}
+
+#what .items .item {
+  flex: 1;
+  text-align: center;
+  padding: 1rem;
+  line-height: 1.8rem;
+}
+
+#what .items .item i {
+  background: #93cb52;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+} 
+
+/* Section: Who We Are */
+#who {
+  display: flex;
+}
+
+#who div { /* every div in the id */
+  flex: 1;
+}
+
+#who .who-img {
+  background: url('../img/people.jpg') no-repeat center center/cover;
+}
+
+/* Section: Clients */
+#clients .items {
+  display: flex;
+}
+
+#clients .items img {
+  display: block;
+  margin: auto;
+  width: 65%;
+}
+
+/* Section: Contact */
+#contact {
+  display: flex; 
+}
+
+#contact .map, #contact .contact-form {
+  flex: 1;
+}
+
+#contact .contact-form .form-group {
+  margin: 0.75rem;
+}
+
+#contact .contact-form label {
+  display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea {
+  width: 90%;
+  padding: 0.5rem;
+}
+
+#contact .map {
+  display: block;
+  margin: auto;
+  width: 60%;
 }
