--- a/EDGELEDGER_WEBSITE/css/mobile.css
+++ b/EDGELEDGER_WEBSITE/css/mobile.css
@@ -24,7 +24,51 @@
   }
 
   #navbar .logo {
-    margin-bottom: 0.5rem;
+    margin-bottom:0.5rem;
     text-align: center;
   }
+
+  #navbar ul {
+    padding: 0.5rem;
+  }
+
+  #showcase .showcase-content {
+    top: 110px;
+  }
+
+  #who {
+    display: block;
+  }
+
+  #who .who-img {
+    display: none;
+  }
+
+  #clients .items img {
+    width: 80%;
+  }
+
+  #clients .items div:last-child {
+    display: none;
+  }
+
+  #contact {
+    flex-direction: column;
+  }
+}
+
+@media(max-height: 568px) {
+  #showcase .showcase-content {
+    margin-top: -2rem;
+    top: 142px;
+  }
+
+  .l-heading {
+    font-size: 3rem;
+  }
+
+  .lead {
+    font-size: 1rem;
+  }
+
 }
